fix(css): change letter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ header {
 }
 
 .kerning {
-  letter-spacing: 2.5px;
+  letter-spacing: 2px;
 }
 
 .impact-image {
