--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -107,7 +107,7 @@ header {
 }
 
 .kerning {
-letter-spacing: 2.5px;
+letter-spacing: 2px;
 }
 
 
